update readme and little fix for usage help message